Jonah Park issue 4 step 1:  Add a button to the entry form with the text Delete Entry which is only visible when an entry is currently being edited.

--- a/css/layout.css
+++ b/css/layout.css
@@ -18,8 +18,12 @@
   align-items: center;
 }
 
-.save-button-row {
-  justify-content: end;
+.space-between {
+  justify-content: space-between;
+}
+
+.align-right {
+  justify-content: flex-end;
 }
 
 .entries-row {
